--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,5 +1,7 @@
 {
   "defaultViewMode": "preview",
   "livePreview": false,
-  "vimMode": true
+  "vimMode": true,
+  "tabSize": 2,
+  "readableLineLength": false
 }
