--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -3,6 +3,6 @@
   "livePreview": false,
   "vimMode": true,
   "tabSize": 2,
-  "readableLineLength": false,
+  "readableLineLength": true,
   "showLineNumber": true
 }
